--- a/common/footer.html
+++ b/common/footer.html
@@ -86,7 +86,7 @@
                         <img src="../img/plus.png" alt="">
                     </span>
                 </a>
-                <a href="/pages/ednocronology.html" class="item endocrinology">
+                <a href="../pages/ednocronology.html" class="item endocrinology">
                     <span class="icon"></span>
                     <h4>Эндокринология</h4>
                     <span class="plus">
