--- a/pages/blog-page.html
+++ b/pages/blog-page.html
@@ -30,12 +30,12 @@
                 <ul>
                     <li><a class="services-menu-mobile"><span><img src="img/menu.png" alt=""></span>Услуги</a></li>
                     <ul class="second-menu">
-                        <li><a href="../pages/ednocronology.html">Гинекология</a></li>
-                        <li><a href="../pages/ednocronology.html">Репродуктология</a></li>
-                        <li><a href="../pages/ednocronology.html">Неврология</a></li>
-                        <li><a href="../pages/ednocronology.html">Эндокринология</a></li>
-                        <li><a href="../pages/ednocronology.html">Андрология</a></li>
-                        <li><a href="../pages/ednocronology.html">Гепатология</a></li>
+                        <li><a href="/ednocronology.html">Гинекология</a></li>
+                        <li><a href="/ednocronology.html">Репродуктология</a></li>
+                        <li><a href="/ednocronology.html">Неврология</a></li>
+                        <li><a href="/ednocronology.html">Эндокринология</a></li>
+                        <li><a href="/ednocronology.html">Андрология</a></li>
+                        <li><a href="/ednocronology.html">Гепатология</a></li>
                         <li><a href="/pages/welness.html">Wellness</a></li>
                     </ul>
                     <li><a href="/pages/criobank.html">Криобанк</a></li>
@@ -225,7 +225,7 @@
                         <img src="../img/plus.png" alt="">
                     </span>
                 </a>
-                <a href="../pages/ednocronology.html" class="item endocrinology">
+                <a href="/ednocronology.html" class="item endocrinology">
                     <span class="icon"></span>
                     <h4>Эндокринология</h4>
                     <span class="plus">
