--- a/pages/blog-page.html
+++ b/pages/blog-page.html
@@ -30,19 +30,19 @@
                 <ul>
                     <li><a class="services-menu-mobile"><span><img src="img/menu.png" alt=""></span>Услуги</a></li>
                     <ul class="second-menu">
-                        <li><a href="/ednocronology.html">Гинекология</a></li>
-                        <li><a href="/ednocronology.html">Репродуктология</a></li>
-                        <li><a href="/ednocronology.html">Неврология</a></li>
-                        <li><a href="/ednocronology.html">Эндокринология</a></li>
-                        <li><a href="/ednocronology.html">Андрология</a></li>
-                        <li><a href="/ednocronology.html">Гепатология</a></li>
-                        <li><a href="/pages/welness.html">Wellness</a></li>
+                        <li><a href="/stem-murkup/pages/ednocronology.html">Гинекология</a></li>
+                        <li><a href="/stem-murkup/pages/ednocronology.html">Репродуктология</a></li>
+                        <li><a href="/stem-murkup/pages/ednocronology.html">Неврология</a></li>
+                        <li><a href="/stem-murkup/pages/ednocronology.html">Эндокринология</a></li>
+                        <li><a href="/stem-murkup/pages/ednocronology.html">Андрология</a></li>
+                        <li><a href="/stem-murkup/pages/ednocronology.html">Гепатология</a></li>
+                        <li><a href="/stem-murkup/pages/welness.html">Wellness</a></li>
                     </ul>
-                    <li><a href="/pages/criobank.html">Криобанк</a></li>
-                    <li><a href="/pages/about.html">О нас</a></li>
-                    <li><a href="/pages/blog.html">Блог</a></li>
-                    <li><a href="/pages/prices.html">Цены</a></li>
-                    <li><a href="/pages/contacts.html">Контакты</a></li>
+                    <li><a href="/stem-murkup/pages/criobank.html">Криобанк</a></li>
+                    <li><a href="/stem-murkup/pages/about.html">О нас</a></li>
+                    <li><a href="/stem-murkup/pages/blog.html">Блог</a></li>
+                    <li><a href="/stem-murkup/pages/prices.html">Цены</a></li>
+                    <li><a href="/stem-murkup/pages/contacts.html">Контакты</a></li>
                 </ul>
             </div>
             <a class="logo" href="">
@@ -51,11 +51,11 @@
             <div class="desctop-menu">
                 <ul>
                     <li><a class="services-menu-link" href="javascript:;"><img src="img/menu.png" alt="">Услуги</a></li>
-                    <li><a href="/pages/criobank.html">Криобанк</a></li>
-                    <li><a href="/pages/about.html">О нас</a></li>
-                    <li><a href="/pages/blog.html">Блог</a></li>
-                    <li><a href="/pages/prices.html">Цены</a></li>
-                    <li><a href="/pages/contacts.html">Контакты</a></li>
+                    <li><a href="/stem-murkup/pages/criobank.html">Криобанк</a></li>
+                    <li><a href="/stem-murkup/pages/about.html">О нас</a></li>
+                    <li><a href="/stem-murkup/pages/blog.html">Блог</a></li>
+                    <li><a href="/stem-murkup/pages/prices.html">Цены</a></li>
+                    <li><a href="/stem-murkup/pages/contacts.html">Контакты</a></li>
                 </ul>
             </div>
             <div class="block-header">
@@ -225,7 +225,7 @@
                         <img src="../img/plus.png" alt="">
                     </span>
                 </a>
-                <a href="/ednocronology.html" class="item endocrinology">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item endocrinology">
                     <span class="icon"></span>
                     <h4>Эндокринология</h4>
                     <span class="plus">
