--- a/common/footer.html
+++ b/common/footer.html
@@ -63,57 +63,57 @@
     <div class="service-menu" id="service-open" style="display: none;">
         <div class="services-blocks">
             <div class="left">
-                <a href="" class="item ginecology">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item ginecology">
                     <span class="icon"></span>
                     <h4>Гинекология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
-                <a href="" class="item neurology">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item neurology">
                     <span class="icon"></span>
                     <h4>Неврология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
             </div>
             <div class="center">
-                <a href="" class="item reproduct">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item reproduct">
                     <span class="icon"></span>
                     <h4>Репродуктология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
                 <a href="/stem-murkup/pages/ednocronology.html" class="item endocrinology">
                     <span class="icon"></span>
                     <h4>Эндокринология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
-                <a href="" class="item wellness">
+                <a href="/stem-murkup/pages/welness.html" class="item wellness">
                     <span class="icon"></span>
                     <h4>Wellness</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
             </div>
             <div class="right">
-                <a href="" class="item andrology">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item andrology">
                     <span class="icon"></span>
                     <h4>Андрология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
-                <a href="" class="item hepatology">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item hepatology">
                     <span class="icon"></span>
                     <h4>Гепатология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
             </div>
