--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li><a href="/stem-murkup/pages/ednocronology.html">Эндокринология</a></li>
                         <li><a href="/stem-murkup/pages/ednocronology.html">Андрология</a></li>
                         <li><a href="/stem-murkup/pages/ednocronology.html">Гепатология</a></li>
-                        <li><a href="/pages/welness.html">Wellness</a></li>
+                        <li><a href="/stem-murkup/pages//pages/welness.html">Wellness</a></li>
                     </ul>
                     <li><a href="/stem-murkup/pages/criobank.html">Криобанк</a></li>
                     <li><a href="/stem-murkup/pages/about.html">О нас</a></li>
@@ -148,14 +148,14 @@
                         <br />Улучшение самочувствия и эмоционального фона</span>
                     <div class="services-blocks">
                         <div class="left">
-                            <a href="" class="item ginecology">
+                            <a href="/stem-murkup/pages/ednocronology.html" class="item ginecology">
                                 <span class="icon"></span>
                                 <h4>Гинекология</h4>
                                 <span class="plus">
                                     <img src="img/plus.png" alt="">
                                 </span>
                             </a>
-                            <a href="" class="item neurology">
+                            <a href="/stem-murkup/pages/ednocronology.html" class="item neurology">
                                 <span class="icon"></span>
                                 <h4>Неврология</h4>
                                 <span class="plus">
@@ -164,7 +164,7 @@
                             </a>
                         </div>
                         <div class="center">
-                            <a href="" class="item reproduct">
+                            <a href="/stem-murkup/pages/ednocronology.html" class="item reproduct">
                                 <span class="icon"></span>
                                 <h4>Репродуктология</h4>
                                 <span class="plus">
@@ -178,7 +178,7 @@
                                     <img src="img/plus.png" alt="">
                                 </span>
                             </a>
-                            <a href="" class="item wellness">
+                            <a href="/stem-murkup/pages/welness.html" class="item wellness">
                                 <span class="icon"></span>
                                 <h4>Wellness</h4>
                                 <span class="plus">
@@ -187,14 +187,14 @@
                             </a>
                         </div>
                         <div class="right">
-                            <a href="" class="item andrology">
+                            <a href="/stem-murkup/pages/ednocronology.html" class="item andrology">
                                 <span class="icon"></span>
                                 <h4>Андрология</h4>
                                 <span class="plus">
                                     <img src="img/plus.png" alt="">
                                 </span>
                             </a>
-                            <a href="" class="item hepatology">
+                            <a href="/stem-murkup/pages/ednocronology.html" class="item hepatology">
                                 <span class="icon"></span>
                                 <h4>Гепатология</h4>
                                 <span class="plus">
@@ -204,21 +204,21 @@
                         </div>
                     </div>
                     <div class="services-blocks-mobile">
-                        <a href="" class="item ginecology">
+                        <a href="/stem-murkup/pages/ednocronology.html" class="item ginecology">
                             <span class="icon"></span>
                             <h4>Гинекология</h4>
                             <span class="plus">
                                 <img src="img/plus.png" alt="">
                             </span>
                         </a>
-                        <a href="" class="item reproduct">
+                        <a href="/stem-murkup/pages/ednocronology.html" class="item reproduct">
                             <span class="icon"></span>
                             <h4>Репродуктология</h4>
                             <span class="plus">
                                 <img src="img/plus.png" alt="">
                             </span>
                         </a>
-                        <a href="" class="item neurology">
+                        <a href="/stem-murkup/pages/ednocronology.html" class="item neurology">
                             <span class="icon"></span>
                             <h4>Неврология</h4>
                             <span class="plus">
@@ -232,21 +232,21 @@
                                 <img src="img/plus.png" alt="">
                             </span>
                         </a>
-                        <a href="" class="item andrology">
+                        <a href="/stem-murkup/pages/ednocronology.html" class="item andrology">
                             <span class="icon"></span>
                             <h4>Андрология</h4>
                             <span class="plus">
                                 <img src="img/plus.png" alt="">
                             </span>
                         </a>
-                        <a href="" class="item hepatology">
+                        <a href="/stem-murkup/pages/ednocronology.html" class="item hepatology">
                             <span class="icon"></span>
                             <h4>Гепатология</h4>
                             <span class="plus">
                                 <img src="img/plus.png" alt="">
                             </span>
                         </a>
-                        <a href="" class="item wellness">
+                        <a href="/stem-murkup/pages/welness.html" class="item wellness">
                             <span class="icon"></span>
                             <h4>Wellness</h4>
                             <span class="plus">
@@ -611,12 +611,12 @@
             </div>
             <div class="col-center">
                 <p class="title">Контент</p>
-                <a href="">Услуги</a>
-                <a href="">О нас</a>
+                <a href="#">Услуги</a>
+                <a href="/stem-murkup/pages/about.html">О нас</a>
                 <a href="">Препараты</a>
-                <a href="">Блог</a>
-                <a href="">Цены</a>
-                <a href="">Контакты</a>
+                <a href="/stem-murkup/pages/blog.html">Блог</a>
+                <a href="/stem-murkup/pages/prices.html">Цены</a>
+                <a href="/stem-murkup/pages/contacts.html">Контакты</a>
             </div>
             <div class="col-right">
                 <p class="title">Подпишитесь на наши новости</p>
