--- a/pages/ednocronology.html
+++ b/pages/ednocronology.html
@@ -36,13 +36,13 @@
                         <li><a href="/stem-murkup/pages/ednocronology.html">Эндокринология</a></li>
                         <li><a href="/stem-murkup/pages/ednocronology.html">Андрология</a></li>
                         <li><a href="/stem-murkup/pages/ednocronology.html">Гепатология</a></li>
-                        <li><a href="/pages/welness.html">Wellness</a></li>
+                        <li><a href="/stem-murkup/pages/welness.html">Wellness</a></li>
                     </ul>
-                    <li><a href="/pages/criobank.html">Криобанк</a></li>
-                    <li><a href="/pages/about.html">О нас</a></li>
-                    <li><a href="/pages/blog.html">Блог</a></li>
-                    <li><a href="/pages/prices.html">Цены</a></li>
-                    <li><a href="/pages/contacts.html">Контакты</a></li>
+                    <li><a href="/stem-murkup/pages/criobank.html">Криобанк</a></li>
+                    <li><a href="/stem-murkup/pages/about.html">О нас</a></li>
+                    <li><a href="/stem-murkup/pages/blog.html">Блог</a></li>
+                    <li><a href="/stem-murkup/pages/prices.html">Цены</a></li>
+                    <li><a href="/stem-murkup/pages/contacts.html">Контакты</a></li>
                 </ul>
             </div>
             <a class="logo" href="">
@@ -51,11 +51,11 @@
             <div class="desctop-menu">
                 <ul>
                     <li><a class="services-menu-link" href="javascript:;"><img src="img/menu.png" alt="">Услуги</a></li>
-                    <li><a href="/pages/criobank.html">Криобанк</a></li>
-                    <li><a href="/pages/about.html">О нас</a></li>
-                    <li><a href="/pages/blog.html">Блог</a></li>
-                    <li><a href="/pages/prices.html">Цены</a></li>
-                    <li><a href="/pages/contacts.html">Контакты</a></li>
+                    <li><a href="/stem-murkup/pages/criobank.html">Криобанк</a></li>
+                    <li><a href="/stem-murkup/pages/about.html">О нас</a></li>
+                    <li><a href="/stem-murkup/pages/blog.html">Блог</a></li>
+                    <li><a href="/stem-murkup/pages/prices.html">Цены</a></li>
+                    <li><a href="/stem-murkup/pages/contacts.html">Контакты</a></li>
                 </ul>
             </div>
             <div class="block-header">
@@ -99,7 +99,7 @@
                                 <img src="../img/endocrin-problem-img.png" alt="">
                             </div>
                             <div class="bottom">
-                                <a href="/pages/text-page.html">Подробнее
+                                <a href="/stem-murkup/pages/text-page.html">Подробнее
                                     <img src="../img/arrow_right_white.png" alt="">
                                 </a>
                             </div>
@@ -111,7 +111,7 @@
                                 <img src="../img/endocrin-problem-img.png" alt="">
                             </div>
                             <div class="bottom">
-                                <a href="/pages/text-page.html">Подробнее
+                                <a href="/stem-murkup/pages/text-page.html">Подробнее
                                     <img src="../img/arrow_right_white.png" alt="">
                                 </a>
                             </div>
@@ -123,7 +123,7 @@
                                 <img src="../img/endocrin-problem-img.png" alt="">
                             </div>
                             <div class="bottom">
-                                <a href="/pages/text-page.html">Подробнее
+                                <a href="/stem-murkup/pages/text-page.html">Подробнее
                                     <img src="../img/arrow_right_white.png" alt="">
                                 </a>
                             </div>
@@ -285,57 +285,57 @@
     <div class="service-menu" id="service-open" style="display: none;">
         <div class="services-blocks">
             <div class="left">
-                <a href="" class="item ginecology">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item ginecology">
                     <span class="icon"></span>
                     <h4>Гинекология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
-                <a href="" class="item neurology">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item neurology">
                     <span class="icon"></span>
                     <h4>Неврология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
             </div>
             <div class="center">
-                <a href="" class="item reproduct">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item reproduct">
                     <span class="icon"></span>
                     <h4>Репродуктология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
                 <a href="/stem-murkup/pages/ednocronology.html" class="item endocrinology">
                     <span class="icon"></span>
                     <h4>Эндокринология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
-                <a href="" class="item wellness">
+                <a href="/stem-murkup/pages/welness.html" class="item wellness">
                     <span class="icon"></span>
                     <h4>Wellness</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
             </div>
             <div class="right">
-                <a href="" class="item andrology">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item andrology">
                     <span class="icon"></span>
                     <h4>Андрология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
-                <a href="" class="item hepatology">
+                <a href="/stem-murkup/pages/ednocronology.html" class="item hepatology">
                     <span class="icon"></span>
                     <h4>Гепатология</h4>
                     <span class="plus">
-                        <img src="../img/plus.png" alt="">
+                        <img src="img/plus.png" alt="">
                     </span>
                 </a>
             </div>
