--- a/pages/about.html
+++ b/pages/about.html
@@ -46,7 +46,7 @@
                 </ul>
             </div>
             <a class="logo" href="">
-                <img src="img/logo-1.png" alt="">
+                <img src="../img/logo-1.png" alt="">
             </a>
             <div class="desctop-menu">
                 <ul>
