--- a/pages/pay.html
+++ b/pages/pay.html
@@ -28,7 +28,7 @@
             </div>
             <div class="mobile-menu">
                 <ul>
-                    <li><a class="services-menu-mobile"><span><img src="img/menu.png" alt=""></span>Услуги</a></li>
+                    <li><a class="services-menu-mobile"><span><img src="../img/menu.png" alt=""></span>Услуги</a></li>
                     <ul class="second-menu">
                         <li><a href="/stem-murkup/pages/ednocronology.html">Гинекология</a></li>
                         <li><a href="/stem-murkup/pages/ednocronology.html">Репродуктология</a></li>
@@ -46,11 +46,11 @@
                 </ul>
             </div>
             <a class="logo" href="">
-                <img src="img/logo-1.png" alt="">
+                <img src="../img/logo-1.png" alt="">
             </a>
             <div class="desctop-menu">
                 <ul>
-                    <li><a class="services-menu-link" href="javascript:;"><img src="img/menu.png" alt="">Услуги</a></li>
+                    <li><a class="services-menu-link" href="javascript:;"><img src="../img/menu.png" alt="">Услуги</a></li>
                     <li><a href="/stem-murkup/pages/criobank.html">Криобанк</a></li>
                     <li><a href="/stem-murkup/pages/about.html">О нас</a></li>
                     <li><a href="/stem-murkup/pages/blog.html">Блог</a></li>
@@ -60,11 +60,11 @@
             </div>
             <div class="block-header">
                 <div class="search">
-                    <button class="button-search"><img src="img/search.png" alt=""></button>
+                    <button class="button-search"><img src="../img/search.png" alt=""></button>
                     <input type="text">
                 </div>
                 <div class="langs">
-                    <span class="button-lang">RU <span><img src="img/broken_arrow_down.png" alt=""></span></span>
+                    <span class="button-lang">RU <span><img src="../img/broken_arrow_down.png" alt=""></span></span>
                     <ul>
                         <li><a href="">UA</a></li>
                         <li><a href="">EN</a></li>
